--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 <body>
    <main>
+    <div id="ui">
+        <div id="controls">
+            <div id="top">
+                <button id="up">
+                    Up
+                </button>
+            </div>
+            <div id="bottom">
+                <button id="left">Left</button>
+                <button id="down">Down</button>
+                <button id="right">Right</button>
+            </div>
+        </div>
+    </div>
     <canvas id="c">
         Error!
         Canvas isn't supported
