--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MD Game</title>
 
     <link rel="stylesheet" href="/assets/css/main.css">
-    <script defer src="/assets/js/main/loader"></script>
+    <script defer src="/assets/js/main/loader" type="module"></script>
 </head>
 <body>
    <main>
