added different jump

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
    <main>
     <div id="ui">
         <div id="controls">
-            <div id="top">
-                <button id="up">
-                    Up
-                </button>
-            </div>
-            <div id="bottom">
+            <div id="l">
                 <button id="left">Left</button>
                 <button id="down">Down</button>
                 <button id="right">Right</button>
+            </div>
+            <div id="r">
+                <button id="up">
+                    Up
+                </button>
             </div>
         </div>
     </div>
