fixed fps issue maybe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MD Game</title>
 
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/controls.css">
     <script defer src="/assets/js/main/loader" type="module"></script>
 </head>
 <body>
@@ -13,13 +14,19 @@
     <div id="ui">
         <div id="controls">
             <div id="l">
-                <button id="left">Left</button>
-                <button id="down">Down</button>
-                <button id="right">Right</button>
+                <button id="left">
+                    <img src="assets/sprites/controls/left.png" alt="left">
+                </button>
+                <button id="down">
+                    <img src="assets/sprites/controls/left.png" alt="down">
+                </button>
+                <button id="right">
+                    <img src="assets/sprites/controls/left.png" alt="right">
+                </button>
             </div>
             <div id="r">
                 <button id="up">
-                    Up
+                    <img src="assets/sprites/controls/left.png" alt="jump">
                 </button>
             </div>
         </div>
