--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 </button>
             </div>
         </div>
+        <div id="menu-bar">
+            <button id="menu-btn">Menu</button>
+        </div>
+        <div id="menu-overlay" class="hidden" data-display="flex">
+            <button id="level-editor">Level Editor :)</button>
+        </div>
     </div>
     <canvas id="c">
         Error!
