fixed level editor

--- a/index.html
+++ b/index.html
@@ -31,14 +31,8 @@
                 </button>
             </div>
         </div>
-        <div id="menu-bar">
-            <button id="menu-btn">Menu</button>
-        </div>
-        <div id="menu-overlay" class="hidden" data-display="flex">
-            <button id="level-editor">Level Editor :)</button>
-        </div>
+        <div id="menu-bar"></div>
         <div id="level-editor" class="hidden" data-display="block">
-            <button id="back">Back</button>
             <div id="blocks">
                 <button id="basic-block">Basic block</button>
             </div>
