Lots of changes. Added sfx, more obstacles, and ui changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
    <main>
     <div id="ui">
+        <div id="play-c">
+            <button id="play">Play</button>
+        </div>
         <div id="controls">
             <div id="l">
                 <button id="left">
@@ -30,6 +33,9 @@
                 </button>
             </div>
             <div id="r">
+                <button id="shoot">
+                    <img src="assets/sprites/controls/shoot.png" alt="shoot">
+                </button>
                 <button id="up">
                     <img src="assets/sprites/controls/left.png" alt="jump">
                 </button>
