Working on adding hp bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/css/controls.css">
     <link rel="stylesheet" href="/assets/css/level-editor.css">
     <link rel="stylesheet" href="/assets/css/inventory.css">
+    <link rel="stylesheet" href="/assets/css/stats.css">
     <script defer src="/assets/js/main/loader" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
@@ -46,6 +47,11 @@
         <div id="level-editor" class="hidden">
             <div id="blocks">
                 <button id="basic-block">Basic block</button>
+            </div>
+        </div>
+        <div id="stats">
+            <div id="health-c">
+                <p id="health">10/10</p>
             </div>
         </div>
     </div>
