you can now only place one block in one grid

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div id="menu-bar"></div>
         <div id="inventory" class="hidden"></div>
         <div id="level-editor" class="hidden">
+            <button id="get-text">Get text</button>
             <div id="blocks">
                 <button id="basic-block">Basic block</button>
             </div>
