greatly improved level editor. You can now delete blocks and add spikes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
         <div id="level-editor" class="hidden">
             <button id="get-text">Get text</button>
             <div id="blocks">
-                <button id="basic-block">Basic block</button>
+                <!--
+                <button id="remove">
+                    Remove
+                </button>
+                <button id="basic-block">
+                    <img src="assets/sprites/blocks/block.png" alt="basic block">
+                </button>
+            -->
             </div>
         </div>
         <div id="stats">
