--- a/index.html
+++ b/index.html
@@ -45,17 +45,12 @@
         <div id="menu-bar"></div>
         <div id="inventory" class="hidden"></div>
         <div id="level-editor" class="hidden">
-            <button id="get-text">Get text</button>
-            <div id="blocks">
-                <!--
-                <button id="remove">
-                    Remove
-                </button>
-                <button id="basic-block">
-                    <img src="assets/sprites/blocks/block.png" alt="basic block">
-                </button>
-            -->
+            <div id="util">
+                <button id="get-text">Get text</button>
+                <button id="left">Turn left</button>
+                <button id="right">Turn right</button>
             </div>
+            <div id="blocks"></div>
         </div>
         <div id="stats">
             <div id="health-c">
