changed things and added rotation

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div id="level-editor" class="hidden">
             <div id="util">
                 <button id="get-text">Get text</button>
-                <button id="left">Turn left</button>
-                <button id="right">Turn right</button>
+                <button id="left"><img src="assets/sprites/misc/rotate.png"></button>
+                <button id="right"><img src="assets/sprites/misc/rotate.png"></button>
             </div>
             <div id="blocks"></div>
         </div>
@@ -57,6 +57,7 @@
                 <p id="health">10/10</p>
             </div>
         </div>
+        <div id="pan-area"></div>
     </div>
     <canvas id="c">
         Error!
