--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/level-editor.css">
     <link rel="stylesheet" href="/assets/css/inventory.css">
     <link rel="stylesheet" href="/assets/css/stats.css">
+    <link rel="stylesheet" href="/assets/css/dev-menu.css">
     <script defer src="/assets/js/main/loader" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
@@ -57,6 +58,7 @@
                 <p id="health">10/10</p>
             </div>
         </div>
+        <div id="dev-menu" class="hidden"></div>
         <div id="pan-area"></div>
     </div>
     <canvas id="c">
