fixed some bugs and added dev tools

--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
         <div id="dev-menu" class="hidden"></div>
         <div id="debug-area" class="hidden"></div>
         <div id="texture-packer" class="hidden">
+            <div id="main"></div>
             <div id="bottom"></div>
         </div>
+        <div id="pan-area"></div>
     </div>
     <canvas id="c">
         Error!
         Canvas isn't supported
     </canvas>
-    <div id="pan-area"></div>
    </main>
 </body>
 </html>
